Fixed layout on narrow devices. Ensure projected bonus points show during match.

--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,13 @@ a {
 		font-size: 12px;
 	}
 	.siimple-table-cell {
+		padding: 5px;
 		border-radius: 0 !important;
 	}
+	.siimple-hide-sm {
+		display: none;
+	}
+
 }
 
 .siimple-flex {
@@ -321,12 +326,20 @@ img.bw {
 	padding-left: 0;
 }
 
+.padding-left-5 {
+	padding-left: 5px;
+}
+
 .padding-left-30 {
 	padding-left: 30px !important;
 }
 
 .padding-right-0 {
 	padding-right: 0;
+}
+
+.padding-right-5 {
+	padding-right: 5px;
 }
 
 .text-center {
